WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/ExperianBizID__c.object-meta.xml
<CustomObject>
    <label>Experian BizID with Score</label>
    <nameField>
        <displayFormat>Biz-{0000000000}</displayFormat>
        <label>BizID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian BizID with Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>