WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experian BizID with Score</relationshipLabel>
    <relationshipName>Experian_BizID_with_Score</relationshipName>
    <type>Lookup</type>
</CustomField>