WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Transaction decision returned from BizID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision</label>
    <length>3</length>
    <type>Text</type>
</CustomField>