WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/OFAC_Description__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Description__c</fullName>
    <formula>IF(OFACCode__c = &quot;1&quot;, &quot;No Match&quot;,
IF(OFACCode__c = &quot;2&quot;, &quot;Match to full name only&quot;,
IF(OFACCode__c = &quot;3&quot;, &quot;Match to SSN only&quot;,
IF(OFACCode__c = &quot;4&quot;, &quot;Match to name and SSN&quot;,
IF(OFACCode__c = &quot;5&quot;, &quot;Match to name and DOB&quot;,
IF(OFACCode__c = &quot;6&quot;, &quot;Match to name and year of birth&quot;,
IF(OFACCode__c = &quot;7&quot;, &quot;Match to SSN and DOB&quot;,
IF(OFACCode__c = &quot;8&quot;, &quot;Match to SSN and year of birth&quot;,
IF(OFACCode__c = &quot;9&quot;, &quot;Match to name, SSN and DOB&quot;,
IF(OFACCode__c = &quot;10&quot;, &quot;Match to name, SSN and year of birth&quot;,
IF(OFACCode__c = &quot;11&quot;, &quot;Match to company name only&quot;,
IF(OFACCode__c = &quot;12&quot;, &quot;Match to company address only&quot;,
IF(OFACCode__c = &quot;13&quot;, &quot;Match to company name and address&quot;,
IF(OFACCode__c = &quot;14&quot;, &quot;Match to surname and first name - partial or first initial&quot;,
IF(OFACCode__c = &quot;15&quot;, &quot;Match to full name only - PLC SDN list&quot;,
IF(OFACCode__c = &quot;16&quot;, &quot;Match to surname and first initial - PLC SDN list&quot;,null
))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OFAC Description</label>
    <type>Text</type>
</CustomField>