WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/OFACCode__c.field-meta.xml
<CustomField>
    <fullName>OFACCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OFACCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>