WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Online_Application__c.field-meta.xml
<CustomField>
    <fullName>Online_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Application</label>
    <referenceTo>OnlineApplication__c</referenceTo>
    <relationshipLabel>Experian BizID with Score</relationshipLabel>
    <relationshipName>Experian_BizID_with_Score</relationshipName>
    <type>Lookup</type>
</CustomField>