WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score calculated by BizID</description>
    <label>Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>