WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>