WexGit/Wex_DX/force-app/main/default/objects/ExperianBizID__c/fields/Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>